ghc-4335c07/testsuite/tests/polykinds/T6039.stderr

T6039.hs:5:14: error:
    • Expected kind ‘* -> *’, but ‘j’ has kind ‘*’
    • In the kind ‘j k’
