ghc-4335c07/testsuite/tests/polykinds/T6039.hs
{-# LANGUAGE PolyKinds, KindSignatures #-}

module Foo where

data T (a :: j k) = MkT

